<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout_home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="name"
            android:background="@drawable/rounded_edittext"
            android:drawableEnd="@drawable/magnify_icon"
            android:hint="@string/hint_home_screen"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:padding="15dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
            app:tabIndicatorHeight="1dp"
            app:tabIndicatorFullWidth="false"
            app:tabIndicator="@color/material_dynamic_primary10"
            app:tabTextColor="@color/material_dynamic_primary10">

            <com.google.android.material.tabs.TabItem
                android:text="@string/all"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                />

            <com.google.android.material.tabs.TabItem
                android:text="@string/favorites"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:textAllCaps="false" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_candidate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_candidate_button"
        android:src="@drawable/add_icon" />

</FrameLayout>

