<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#fdf7fe"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="John Doe">

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@null"
                android:padding="0dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/outline_delete" />

            <ImageButton
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:background="@null"
                android:padding="0dp"
                android:src="@drawable/note_icon" />

            <ImageButton
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:background="@null"
                android:padding="0dp"
                android:src="@drawable/star_outline" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/candidate_image_info"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar_gris_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linear_buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/candidate_image_info">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/circleIconPhoneButton"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="15dp"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        app:cornerRadius="24dp"
                        app:icon="@drawable/phone_icon"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp"
                        app:iconTint="@android:color/black"
                        app:strokeColor="@android:color/darker_gray"
                        app:strokeWidth="1dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11dp"
                        android:text="@string/call"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/circleIconSmsButton"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="15dp"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        app:cornerRadius="24dp"
                        app:icon="@drawable/icon_sms"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp"
                        app:iconTint="@android:color/black"
                        app:strokeColor="@android:color/darker_gray"
                        app:strokeWidth="1dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="9dp"
                        android:text="@string/sms"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/circleIconMailButton"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="15dp"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        app:cornerRadius="24dp"
                        app:icon="@drawable/mail_icon"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp"
                        app:iconTint="@android:color/black"
                        app:strokeColor="@android:color/darker_gray"
                        app:strokeWidth="1dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/e_mail"

                        android:textColor="@android:color/black" />
                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_buttons_layout"
                app:strokeColor="@android:color/darker_gray"
                app:strokeWidth="1dp"
                app:cardBackgroundColor="#20800080">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="15dp"
                        android:text="@string/about"
                        android:textColor="@android:color/black"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/birthday_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:text="@string/mm_dd_yyyy_x_years"
                        android:textSize="11sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingBottom="10dp"
                        android:text="@string/birthday"
                        android:textSize="11sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/expected_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardElevation="0dp"
                app:strokeWidth="1dp"
                app:strokeColor="@android:color/darker_gray"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@id/about"
                app:cardBackgroundColor="#20800080">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/expected_salary"
                        android:textColor="@android:color/black"
                        android:textSize="11sp"/>

                    <TextView
                        android:id="@+id/salary_eur_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:paddingStart="16dp"
                        android:text="3500 €"
                        android:textSize="11sp"/>

                    <TextView
                        android:id="@+id/salary_gbp_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:paddingStart="16dp"
                        android:text="or £ 3026,50"
                        android:textSize="11sp"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardElevation="0dp"
                app:strokeWidth="1dp"
                app:strokeColor="@android:color/darker_gray"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@id/expected_salary"
                app:cardBackgroundColor="#20800080">

                <LinearLayout
                    android:id="@+id/notes_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/notes_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="Notes"
                        android:textColor="@android:color/black"
                        android:textSize="11sp"/>

                    <ScrollView
                        android:id="@+id/notes_scroll_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/notes_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/lorem_ipsum_description"
                            android:textSize="11sp"
                            android:padding="16dp"/>
                    </ScrollView>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>